feature: add code highlight

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -9,10 +9,22 @@
   @apply my-6;
 }
 
+.markdown h1 {
+  @apply text-4xl mt-12 mb-12 font-bold;
+}
+
 .markdown h2 {
   @apply text-3xl mt-12 mb-4 leading-snug;
 }
 
 .markdown h3 {
   @apply text-2xl mt-8 mb-4 leading-snug;
+}
+
+.markdown p a {
+  @apply text-blue-600 underline;
+}
+
+.markdown pre {
+  @apply bg-orange-100 p-10;
 }
